<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QR_CodeScan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="hit_text">添加账号，下次免输入密码登录</string>
	<string name="account_hint">用户名/账号</string>
	<string name="pass_hint">密码</string>
	<string name="account_ok">确定</string>
	<string name="remember_pass">记住密码</string>
	<string name="back">返回</string>
	<string name="title">二维码接入</string>
	
</resources>