<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe1e0de" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:textSize="16sp" 
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:text="@string/hit_text" />

<!--     <ImageView -->
<!--         android:id="@+id/qrcode_bitmap" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:layout_alignParentLeft="true" -->
<!--         android:layout_below="@+id/result"/> -->

    <EditText
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:ems="10"
        android:hint="@string/account_hint" />
    
    <Button
        android:id="@+id/okbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pass"
        android:layout_marginTop="120dp"
        android:textSize="30sp"
        android:text="@string/account_ok"
        android:textColor="@color/button_textcolor"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/account"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pass"
        android:checked="true"
        android:text="@string/remember_pass" />

</RelativeLayout>